--- a/rock_paper_scissors.html
+++ b/rock_paper_scissors.html
@@ -1,26 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Rock paper Scissors</title>
+<html>
+  <head>
+    <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="css/styles1.css">
-</head>
-<body>
-    <p class="title">Rock Paper Scissors</p> 
-    <button class = "move-button" onclick="playGame('Rock');"><img src="images/rock-emoji.png " class = "move-icon"></button>
-    <button class = "move-button" onclick="playGame('Paper');"><img src="images/paper-emoji.png "class = "move-icon"></button>
-    <button class = "move-button" onclick="playGame('Scissors');"><img src="images/scissors-emoji.png "class = "move-icon"></button>
-    <p class = "js-result result"></p>
-    <p class = "js-moves moves"></p>
-    <p class = "js-score score"></p>
+  </head>
+  <body>
+    <p class="title">Rock Paper Scissors</p>
+    <button class="move-button js-rock-button">
+      <img src="images/rock-emoji.png" class="move-icon">
+    </button>
+
+    <button class="move-button js-paper-button">
+      <img src="images/paper-emoji.png" class="move-icon">
+    </button>
+
+    <button class="move-button js-scissors-button">
+      <img src="images/scissors-emoji.png" class="move-icon">
+    </button>
+
+    <p class="js-result result"></p>
+    <p class="js-moves"></p>
+    <p class="js-score score"></p>
+
     <button onclick="
-        score.Wins = 0;
-        score.Losses = 0;
-        score.Ties = 0;
-        localStorage.removeItem('score');
-        update_score()
-     " class = "reset-score-button">Reset Score</button>
-    <script src="JavaScript/rock_paper_scissors.js" >
-    </script>
-</body>
-</html> 
+      score.wins = 0;
+      score.losses = 0;
+      score.ties = 0;
+      localStorage.removeItem('score');
+      updateScoreElement();
+    " class="reset-score-button js-reset-score-button">Reset Score</button>
+
+    <button class="auto-play-button" onclick="
+      autoPlay();
+    ">Auto Play</button>
+    
+    <script src="JavaScript/rock_paper_scissors.js"></script>
+  </body>
+</html>
