finished the YouTube project

--- a/webste.html
+++ b/webste.html
@@ -1,20 +1,35 @@
-<script>
-    alert("heyy");
-    console.log("hey haven") // we can view the value of this inside inspect -> console
-    console.log(1+1)
-    prompt("enter password")
-    let theNumber = Number(prompt("Pick a number"));
-    console.log("Your number is the square root of " +
-            theNumber * theNumber);
-</script>
-<button onclick="
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        .inline-block{
+            background-color: blueviolet;
+            display: inline-block;
+        }
+        .block{
+            background-color: rgb(168, 18, 80);
+            display: block;
+        }
+    </style>
+</head>
+<!-- <p class = "block">hey</p>
+<p class = "inline-block">hey</p>
+<div style="display:grid; grid-template-columns:1fr 1fr; gap:10px; background:lightblue;">
+  <div style="background:lightgreen;">Item 1</div>
+  <div style="background:lightcoral;">Item 2</div>
+</div> -->
+
+<!-- <button onclick="
 alert('hello') // we can run any javascript code inside this quotes.
 console.log(1)
-"
->hey</button>
-<html>
-    <!--this is an html comment-->
-    <style>
-        /*this is a multi line comment in css*/
-    </style>
-</html>
+" -->
+<div style="display:flex; background:lightblue;">
+  <div style="background:lightgreen;">Item 1</div>
+  <div style="background:lightcoral;">Item 2</div>
+</div>
+
+<!-- >hey</button> -->
+
