--- a/YouTube.html
+++ b/YouTube.html
@@ -4,32 +4,272 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube</title>
-    <link rel = "stylesheet" href = "css/YouTube.css">
+    <link rel = "stylesheet" href = "css/youtube/video.css">
+    <link rel = "stylesheet" href = "css/youtube/header.css">
+    <link rel = "stylesheet" href = "css/youtube/general.css">
+    <link rel = "stylesheet" href = "css/youtube/sideBar.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <input class = "search-bar" type="text" placeholder="Search">
-    <img class = "thumbnail" src = "images/thumbnail-1.webp">
-    <p>Talking Tech and AI with Google CEO Sundar Pichai!</p>
-    <p>Marques Brownlee</p>
-    <p>3.4M views &#183; 6 months ago</p>
-    <img class = "thumbnail" src = "images/thumbnail-2.webp">
-    <p>Try Not To Laugh Challenge</p>
-    <p>Markiplier</p>
-    <p>19M views &#183; 4 years ago</p>
-    <img class = "thumbnail" src = "images/thumbnail-3.webp">
-    <p>Crazy Tik Toks Taken Moments Before DISASTER</p>
-    <p>SSSniperWolf</p>
-    <p>12M views &#183; 1 year ago</p>
-    <img class = "thumbnail" src = "images/thumbnail-4.webp">
-    <p>The Simplest Math Problem No One Can Solve - Collatz Conjecture</p>
-    <p>Veritasium</p>
-    <p>18M views &#183; 4 months ago</p>
-    <img class = "thumbnail" src = "images/thumbnail-5.webp">
-    <img class = "thumbnail" src = "images/thumbnail-6.webp">
-    <img class = "thumbnail" src = "images/thumbnail-7.webp">
-    <img class = "thumbnail" src = "images/thumbnail-8.webp">
-    <img class = "thumbnail" src = "images/thumbnail-9.webp">
-    <img class = "thumbnail" src = "images/thumbnail-10.webp">
+    <header class="header">
+        <div class="left-section">
+            <img class="hamburger-menu" src = "images/icons/hamburger-menu.svg">
+            <img class="youtube-logo" src = "images/icons/youtube-logo.svg">
+        </div>
+        <div class="middle-section">
+            <input class = "search-bar" type="text" placeholder="Search">
+            <button class="search-button">
+            <img class="search-icon" src = "images/icons/search.svg">
+            <div class="tooltip">Search</div>
+            </button>
+            <button class="voice-search-button">
+            <img class="voice-search-icon" src = "images/icons/voice-search-icon.svg">
+            <div class="tooltip">Search with your voice</div>
+            </button>
+        </div>
+        <div class = "right-section">
+            <img class="upload-icon" src="images/icons/upload.svg">
+            <img class="youtube-apps-icon" src="images/icons/youtube-apps.svg">
+            <div class = "notifications">
+                <img class="notifications-icon" src = "images/icons/notifications.svg">
+                <div class = "notifications-number">3</div>
+            </div>
+            <img class="current-user-picture" src = "images/my-channel.jpeg">
+        </div>
+    </header>
+
+    <nav class="side-bar">
+        <div class="sidebar-link">
+            <img src = "images/sidebar-icons/home.svg">
+            <div>Home</div>
+        </div>
+        <div class="sidebar-link">
+            <img src = "images/sidebar-icons/explore.svg">
+            <div>Explore</div>
+        </div>
+        <div class="sidebar-link">
+            <img src = "images/sidebar-icons/subscriptions.svg">
+            <div>Subscriptions</div>
+        </div>
+        <div class="sidebar-link">
+            <img src = "images/sidebar-icons/originals.svg">
+            <div>Originals</div>
+        </div>
+        <div class="sidebar-link">
+            <img src = "images/sidebar-icons/youtube-music.svg">
+            <div>YouTube Music</div>
+        </div>
+        <div class="sidebar-link">
+            <img src = "images/sidebar-icons/library.svg">
+            <div>library</div>
+        </div>
+    </nav>
+    <main>
+    <section class="video-grid">
+        <div class="video-preview">
+            <div class="thumbnail-row">
+                <img class = "thumbnail" src = "images/thumbnail-1.webp">
+                <div class="video-time">14:20</div>
+            </div>
+            <div class="video-info-grid">
+                <div class="channel-picture">
+                    <img class = "profile-picture" src = "images/channel-1.jpeg">
+                </div>
+                <div class="video-info">
+                <p class="video-title">Talking Tech and AI with Google CEO Sundar Pichai!</p>
+                <p class = "video-author">Marques Brownlee</p>
+                <p class="video-stats">3.4M views &#183; 6 months ago</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="video-preview">
+            <div class="thumbnail-row">
+                <img class = "thumbnail" src = "images/thumbnail-2.webp">
+                <div class="video-time">8:22</div>
+            </div>
+            <div class="video-info-grid">
+                <div class="channel-picture">
+                    <img class = "profile-picture" src = "images/channel-2.jpeg">
+                </div>
+                <div class="video-info">
+                <p class="video-title">Try Not To Laugh Challenge</p>
+                <p class = "video-author">Markiplier</p>
+                <p class="video-stats">19M views &#183; 4 years ago</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="video-preview">
+            <div class="thumbnail-row">
+                <img class = "thumbnail" src = "images/thumbnail-3.webp">
+                <div class="video-time">9:13</div>
+            </div>
+            <div class="video-info-grid">
+                <div class="channel-picture">
+                    <img class = "profile-picture" src = "images/channel-3.jpeg">
+                </div>
+                <div class="video-info">
+                <p class="video-title">Crazy Tik Toks Taken Moments Before DISASTER</p>
+                <p class = "video-author">SSSniperWolf</p>
+                <p class="video-stats">12M views &#183; 1 year ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="video-preview">
+            <div class="thumbnail-row">
+                <img class = "thumbnail" src = "images/thumbnail-4.webp">
+                <div class="video-time">22:09</div>
+            </div>
+            <div class="video-info-grid">
+                <div class="channel-picture">
+                    <img class = "profile-picture" src = "images/channel-4.jpeg">
+                </div>
+                <div class="video-info">
+                <p class="video-title">The Simplest Math Problem No One Can Solve - Collatz Conjecture</p>
+                <p class = "video-author">Veritasium</p>
+                <p class="video-stats">18M views &#183; 4 months ago</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="video-preview">
+            <div class="thumbnail-row">
+                <img class = "thumbnail" src = "images/thumbnail-5.webp">
+                <div class="video-time">11:17</div>
+            </div>
+            <div class="video-info-grid">
+                <div class="channel-picture">
+                    <img class = "profile-picture" src = "images/channel-5.jpeg">
+                </div>
+                <div class="video-info">
+                <p class="video-title">The Simplest Math Problem No One Can Solve - Collatz Conjecture</p>
+                <p class = "video-author">Veritasium</p>
+                <p class="video-stats">18M views &#183; 4 months ago</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="video-preview">
+            <div class="thumbnail-row">
+                <img class = "thumbnail" src = "images/thumbnail-6.webp">
+                <div class="video-time">19:59</div>
+            </div>
+            <div class="video-info-grid">
+                <div class="channel-picture">
+                    <img class = "profile-picture" src = "images/channel-6.jpeg">
+                </div>
+                <div class="video-info">
+                <p class="video-title">The Simplest Math Problem No One Can Solve - Collatz Conjecture</p>
+                <p class = "video-author">Veritasium</p>
+                <p class="video-stats">18M views &#183; 4 months ago</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="video-preview">
+            <div class="thumbnail-row">
+                <img class = "thumbnail" src = "images/thumbnail-7.webp">
+                <div class="video-time">10:13</div>
+            </div>
+            <div class="video-info-grid">
+                <div class="channel-picture">
+                    <img class = "profile-picture" src = "images/channel-7.jpeg">
+                </div>
+                <div class="video-info">
+                <p class="video-title">The Simplest Math Problem No One Can Solve - Collatz Conjecture</p>
+                <p class = "video-author">Veritasium</p>
+                <p class="video-stats">18M views &#183; 4 months ago</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="video-preview">
+            <div class="thumbnail-row">
+                <img class = "thumbnail" src = "images/thumbnail-8.webp">
+                <div class="video-time">7:12</div>
+            </div>
+            <div class="video-info-grid">
+                <div class="channel-picture">
+                    <img class = "profile-picture" src = "images/channel-8.jpeg">
+                </div>
+                <div class="video-info">
+                <p class="video-title">The Simplest Math Problem No One Can Solve - Collatz Conjecture</p>
+                <p class = "video-author">Veritasium</p>
+                <p class="video-stats">18M views &#183; 4 months ago</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="video-preview">
+            <div class="thumbnail-row">
+                <img class = "thumbnail" src = "images/thumbnail-9.webp">
+                <div class="video-time">13:17</div>
+            </div>
+            <div class="video-info-grid">
+                <div class="channel-picture">
+                    <img class = "profile-picture" src = "images/channel-9.jpeg">
+                </div>
+                <div class="video-info">
+                <p class="video-title">The Simplest Math Problem No One Can Solve - Collatz Conjecture</p>
+                <p class = "video-author">Veritasium</p>
+                <p class="video-stats">18M views &#183; 4 months ago</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="video-preview">
+            <div class="thumbnail-row">
+                <img class = "thumbnail" src = "images/thumbnail-10.webp">
+                <div class="video-time">7:53</div>
+            </div>
+            <div class="video-info-grid">
+                <div class="channel-picture">
+                    <img class = "profile-picture" src = "images/channel-10.jpeg">
+                </div>
+                <div class="video-info">
+                <p class="video-title">The Simplest Math Problem No One Can Solve - Collatz Conjecture</p>
+                <p class = "video-author">Veritasium</p>
+                <p class="video-stats">18M views &#183; 4 months ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="video-preview">
+            <div class="thumbnail-row">
+                <img class = "thumbnail" src = "images/thumbnail-11.webp">
+                <div class="video-time">4:10</div>
+            </div>
+            <div class="video-info-grid">
+                <div class="channel-picture">
+                    <img class = "profile-picture" src = "images/channel-11.jpeg">
+                </div>
+                <div class="video-info">
+                <p class="video-title">The Simplest Math Problem No One Can Solve - Collatz Conjecture</p>
+                <p class = "video-author">Veritasium</p>
+                <p class="video-stats">18M views &#183; 4 months ago</p>
+                </div>
+            </div>
+        </div>
+        <div class="video-preview">
+            <div class="thumbnail-row">
+                <img class = "thumbnail" src = "images/thumbnail-12.webp">
+                <div class="video-time">4:51</div>
+            </div>
+            <div class="video-info-grid">
+                <div class="channel-picture">
+                    <img class = "profile-picture" src = "images/channel-12.jpeg">
+                </div>
+                <div class="video-info">
+                <p class="video-title">The Simplest Math Problem No One Can Solve - Collatz Conjecture</p>
+                <p class = "video-author">Veritasium</p>
+                <p class="video-stats">18M views &#183; 4 months ago</p>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
     
 </body>
 </html>
